--- a/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
+++ b/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity\CreateCharActivity.cs" />
+    <Compile Include="Activity\GoldPouchActivity.cs" />
+    <Compile Include="Activity\InventoryActivity.cs" />
     <Compile Include="Activity\LoadCharActivity.cs" />
     <Compile Include="Activity\MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -75,6 +77,12 @@
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\createChar.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\goldPouch.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\inventory.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
