--- a/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
+++ b/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Activity\MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\GoldPouch\GoldPouch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
