--- a/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
+++ b/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
@@ -57,12 +57,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity\CreateCharActivity.cs" />
+    <Compile Include="Activity\ExperienceActivity.cs" />
     <Compile Include="Activity\GoldPouchActivity.cs" />
     <Compile Include="Activity\InventoryActivity.cs" />
     <Compile Include="Activity\LoadCharActivity.cs" />
     <Compile Include="Activity\MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Experience\Experience.cs" />
     <Compile Include="Utility\GoldPouch\GoldPouch.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +86,9 @@
       <SubType>AndroidResource</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\inventory.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\experience.axml">
       <SubType>AndroidResource</SubType>
     </AndroidResource>
   </ItemGroup>
