--- a/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
+++ b/DnDAppAndroid/DnDAppAndroid/DnDAppAndroid.csproj
@@ -56,6 +56,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity\CreateCharacter\AbstractHandler.cs" />
+    <Compile Include="Activity\CreateCharacter\RaceHandler.cs" />
+    <Compile Include="Activity\CreateCharacter\SubRaceHandler.cs" />
     <Compile Include="Activity\CreateCharActivity.cs" />
     <Compile Include="Activity\ExperienceActivity.cs" />
     <Compile Include="Activity\GoldPouchActivity.cs" />
@@ -66,6 +69,24 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Experience\Experience.cs" />
     <Compile Include="Utility\GoldPouch\GoldPouch.cs" />
+    <Compile Include="Utility\Race\ConcreteRaceAlternative\DarkElf.cs" />
+    <Compile Include="Utility\Race\ConcreteRaceAlternative\HighElf.cs" />
+    <Compile Include="Utility\Race\ConcreteRaceAlternative\HillDwarf.cs" />
+    <Compile Include="Utility\Race\ConcreteRaceAlternative\MountainDwarf.cs" />
+    <Compile Include="Utility\Race\ConcreteRaceAlternative\WoodElf.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\DragonbornRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\DwarfRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\ElfRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\GnomeRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\HalfElfRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\HalflingRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\HalfOrcRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\HumanRace.cs" />
+    <Compile Include="Utility\Race\ConcreteRace\TieflingRace.cs" />
+    <Compile Include="Utility\Race\RaceAlternative.cs" />
+    <Compile Include="Utility\Race\AbstractRace.cs" />
+    <Compile Include="Utility\Race\RaceManager.cs" />
+    <Compile Include="Utility\Stats\Stat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -104,6 +125,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\BackButtonImg.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Insights.1.10.6\build\MonoAndroid10\Xamarin.Insights.targets" Condition="Exists('..\packages\Xamarin.Insights.1.10.6\build\MonoAndroid10\Xamarin.Insights.targets')" />
 </Project>
